WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106944
REGRESSION (
r121599
): incorrect border scaling when zoomed
https://bugs.webkit.org/show_bug.cgi?id=106944
Summary
REGRESSION (r121599): incorrect border scaling when zoomed
Emil A Eklund
Reported
2013-01-15 14:19:54 PST
1. Create a page with an element that has a relative border-width (e.g., border-width: 0.25em), or view the example at
http://jsfiddle.net/W2SdF/
2. Zoom the page in and out. Expected behavior: The border should scale with the rest of the content. Observed behavior: The border scales more rapidly than the rest of the content. This issue doesn't happen with absolute units like px. It also doesn't happen upon changing the user agent stylesheet's base font size (but of course if I change the base font size and then zoom, the problem does appear). Downstream chromium bug:
http://code.google.com/p/chromium/issues/detail?id=167168
Attachments
Patch
(23.30 KB, patch)
2013-01-15 14:24 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Patch
(24.81 KB, patch)
2013-01-15 14:30 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2013-01-15 14:24:46 PST
Created
attachment 182845
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-15 14:26:13 PST
Attachment 182845
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 LayoutTests/platform/chromium-linux/svg/zoom/page/zoom-replaced-intrinsic-ratio-001-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Emil A Eklund
Comment 3
2013-01-15 14:30:47 PST
Created
attachment 182847
[details]
Patch
WebKit Review Bot
Comment 4
2013-01-15 15:22:59 PST
Comment on
attachment 182847
[details]
Patch Clearing flags on attachment: 182847 Committed
r139798
: <
http://trac.webkit.org/changeset/139798
>
WebKit Review Bot
Comment 5
2013-01-15 15:23:03 PST
All reviewed patches have been landed. Closing bug.
Dominic Cooney
Comment 6
2013-01-15 21:12:06 PST
FYI I rebaselined Chromium results in
r139832
.
Dominic Cooney
Comment 7
2013-01-15 21:30:38 PST
Rebaselined http/tests/misc/object-embedding-svg-delayed-size-negotiation-2.htm on Win in
r139834
. Weirdly Mac bots still had thin borders. They are covered by an ancient failure expectation from
bug 62754
.
Emil A Eklund
Comment 8
2013-01-16 09:08:11 PST
Thanks Dominic, was waiting for the windows bot to run and forgot about it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug