REGRESSION (r121599): incorrect border scaling when zoomed https://bugs.webkit.org/show_bug.cgi?id=106944

Source/WebCore:

Reviewed by Levi Weintraub.

Fix bug in ApplyPropertyComputeLength::applyValue where zooming
of non-pixel values was incorrect.

Test: fast/sub-pixel/zoomed-em-border.html

* css/StyleBuilder.cpp:
(WebCore::ApplyPropertyComputeLength::applyValue):

LayoutTests:

Reviewed by Levi Weintraub.

Add test for zoomed em border and restore expectations for
zoom-replaced-intrinsic-ratio-001 to the pre r121599 state.

* fast/sub-pixel/zoomed-em-border-expected.html: Added.
* fast/sub-pixel/zoomed-em-border.html: Added.
* platform/chromium-linux/svg/zoom/page/zoom-replaced-intrinsic-ratio-001-expected.png:
* platform/chromium-win/svg/zoom/page/zoom-replaced-intrinsic-ratio-001-expected.txt:


Canonical link: https://commits.webkit.org/125181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139798 268f45cc-cd09-0410-ab3c-d52691b4dbfc